--- a/website/views/users/registerClients.ejs
+++ b/website/views/users/registerClients.ejs
@@ -120,7 +120,7 @@
 
       <%- include("../partials/footer") %>
 
-        <!-- <script src="/js/clientValidator.js"></script> -->
+        <script src="/js/clientValidator.js"></script>
 
 </body>
 
